Issue #75: Prepare for release 0.2.2

--- a/integration-setup/pom.xml
+++ b/integration-setup/pom.xml
@@ -19,7 +19,7 @@
     <parent>
         <groupId>com.deciphernow</groupId>
         <artifactId>gm-fabric</artifactId>
-        <version>0.2.2-SNAPSHOT</version>
+        <version>0.2.2</version>
     </parent>
 
     <artifactId>gm-fabric-core-integration-setup</artifactId>
