--- a/archetype/src/test/resources/projects/basic/archetype.properties
+++ b/archetype/src/test/resources/projects/basic/archetype.properties
@@ -4,5 +4,5 @@ version=0.1.0-SNAPSHOT
 groupId=com.deciphernow
 artifactId=gm-fabric-archetype
 appName=TestApp
-serviceFrameworkVersion=0.2.2-SNAPSHOT
-version.service.framework=0.2.2-SNAPSHOT
+serviceFrameworkVersion=0.2.2
+version.service.framework=0.2.2
