--- a/cloudwatch/pom.xml
+++ b/cloudwatch/pom.xml
@@ -23,7 +23,7 @@
     <parent>
         <groupId>com.deciphernow</groupId>
         <artifactId>gm-fabric</artifactId>
-        <version>0.2.2</version>
+        <version>0.2.3-SNAPSHOT</version>
     </parent>
 
     <artifactId>gm-fabric-cloudwatch</artifactId>
